--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2539,6 +2539,89 @@ body {
 .cid-rVgTZSxAwC .mbr-section-subtitle {
   color: #767676;
 }
+.cid-rW0L3rqqy1 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #b2ccd2;
+}
+.cid-rW0L3rqqy1 .mbr-text,
+.cid-rW0L3rqqy1 blockquote {
+  color: #767676;
+}
+.cid-rW11BJpnSU {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #cccccc;
+}
+.cid-rW11BJpnSU .counter-container {
+  color: #767676;
+}
+.cid-rW11BJpnSU .counter-container ol {
+  margin-bottom: 0;
+}
+.cid-rW11BJpnSU .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-rW11BJpnSU .mbr-text B {
+  color: #232323;
+}
+.cid-rW0MrSsHyI {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #b2ccd2;
+}
+@media (min-width: 992px) {
+  .cid-rW0MrSsHyI .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-rW0MrSsHyI .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rW0MrSsHyI .mbr-text {
+  color: #251515;
+}
+.cid-rW0VW7WRxb {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #b2ccd2;
+}
+@media (min-width: 992px) {
+  .cid-rW0VW7WRxb .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-rW0VW7WRxb .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rW0VW7WRxb .mbr-text {
+  color: #767676;
+}
+.cid-rW0VW7WRxb .mbr-text B {
+  color: #251515;
+}
+.cid-rW10ldzjUb {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #b2ccd2;
+}
+@media (min-width: 992px) {
+  .cid-rW10ldzjUb .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-rW10ldzjUb .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rW10ldzjUb .mbr-text {
+  color: #251515;
+}
 .cid-rVgVIITtVJ {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -2559,18 +2642,30 @@ body {
 .cid-rVgVIITtVJ .card-wrapper {
   height: 100%;
 }
-.cid-rVh3dsNgda {
+.cid-rW13ex3AHL {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #cccccc;
+}
+.cid-rW13ex3AHL .counter-container {
+  color: #767676;
+}
+.cid-rW13ex3AHL .counter-container ul {
+  margin-bottom: 0;
+}
+.cid-rW13ex3AHL .counter-container ul li {
+  margin-bottom: 1rem;
+}
+.cid-rW13ex3AHL .mbr-text UL {
+  color: #232323;
+}
+.cid-rW13LSLJj4 {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #b2ccd2;
 }
-.cid-rVh3dsNgda .mbr-text,
-.cid-rVh3dsNgda blockquote {
+.cid-rW13LSLJj4 .mbr-section-subtitle {
   color: #767676;
-}
-.cid-rVh3dsNgda .mbr-text {
-  color: #232323;
-  text-align: center;
 }
 .cid-rVh2Ruk9gB {
   padding-top: 15px;
@@ -2608,6 +2703,23 @@ body {
 }
 .cid-rVh2Ruk9gB P {
   color: #5b686b;
+}
+.cid-rW1c4RUGCo {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #b2ccd2;
+}
+.cid-rW1c4RUGCo .mbr-text,
+.cid-rW1c4RUGCo blockquote {
+  color: #767676;
+}
+.cid-rW1c4RUGCo .mbr-text P {
+  color: #251515;
+}
+.cid-rW1dZcX1LG {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
 }
 .cid-rUCcLHyWEW .navbar {
   padding: .5rem 0;
