--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2356,42 +2356,44 @@ body {
 .cid-rVgKgQ2dYm .mbr-text {
   color: #232323;
 }
-.cid-rUCkZvAf3e {
+.cid-rWtT28nhxY {
   padding-top: 15px;
-  padding-bottom: 0px;
+  padding-bottom: 30px;
+  background: #b2ccd2;
+}
+.cid-rWtT28nhxY .image-block {
+  margin: auto;
+}
+.cid-rWtT28nhxY figcaption {
+  position: relative;
+}
+.cid-rWtT28nhxY figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rWtT28nhxY .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rWtTAWGFnd {
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #b2ccd2;
 }
-@media (min-width: 992px) {
-  .cid-rUCkZvAf3e .mbr-figure {
-    padding-right: 4rem;
-  }
+.cid-rWtTAWGFnd .mbr-text,
+.cid-rWtTAWGFnd blockquote {
+  color: #767676;
 }
-@media (max-width: 992px) {
-  .cid-rUCkZvAf3e .mbr-figure {
-    padding-bottom: 1rem;
-  }
+.cid-rWtTAWGFnd .mbr-text DIV {
+  color: #251515;
 }
-.cid-rUCkZvAf3e .mbr-text {
-  color: #232323;
+.cid-rWtTAWGFnd .mbr-text B {
+  color: #251515;
 }
-.cid-rUClaQLdce {
-  padding-top: 15px;
-  padding-bottom: 0px;
-  background-color: #b2ccd2;
-}
-@media (min-width: 992px) {
-  .cid-rUClaQLdce .mbr-figure {
-    padding-left: 4rem;
-  }
-}
-@media (max-width: 992px) {
-  .cid-rUClaQLdce .mbr-figure {
-    padding-top: 1rem;
-  }
-}
-.cid-rUClaQLdce .mbr-text {
-  color: #232323;
-  text-align: left;
+.cid-rWtTAWGFnd .mbr-text {
+  color: #251515;
 }
 .cid-rVgQfswRtt {
   padding-top: 15px;
@@ -2420,137 +2422,69 @@ body {
 .cid-rVgQZsMZos .mbr-text {
   color: #232323;
 }
-.cid-rVgRI6IWKm {
+.cid-rWunzg4dHX {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background: #b2ccd2;
+}
+.cid-rWunzg4dHX .images-container.container-fluid {
+  padding: 0;
+}
+.cid-rWunzg4dHX .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+}
+.cid-rWunzg4dHX .media-container-row .img-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+.cid-rWunzg4dHX .media-container-row .img-item img {
+  width: 100%;
+  min-height: 1px;
+}
+.cid-rWunzg4dHX .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-rWunzg4dHX .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-rWunzg4dHX .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-rWunzg4dHX .img-item {
+    width: 100% !important;
+  }
+  .cid-rWunzg4dHX .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+  }
+}
+.cid-rWunPnD0l7 {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #b2ccd2;
 }
-@media (min-width: 992px) {
-  .cid-rVgRI6IWKm .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 992px) {
-  .cid-rVgRI6IWKm .mbr-figure {
-    padding-bottom: 1rem;
-  }
-}
-.cid-rVgRI6IWKm .mbr-text {
-  color: #232323;
-}
-.cid-rW3mIj9ebr {
-  padding-top: 30px;
-  padding-bottom: 60px;
-  background-color: #b2ccd2;
-}
-@media (min-width: 992px) {
-  .cid-rW3mIj9ebr .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 992px) {
-  .cid-rW3mIj9ebr .mbr-figure {
-    padding-bottom: 1rem;
-  }
-}
-.cid-rW3mIj9ebr .mbr-text {
-  color: #251515;
-}
-.cid-rW3mIj9ebr .mbr-text B {
-  color: #251515;
-}
-.cid-rUCmoCaSiR {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #b2ccd2;
-}
-.cid-rUCmoCaSiR .mbr-section-subtitle {
+.cid-rWunPnD0l7 .mbr-text,
+.cid-rWunPnD0l7 blockquote {
   color: #767676;
-  font-weight: 300;
 }
-.cid-rUCmoCaSiR .media-container-row {
-  word-wrap: break-word;
-  word-break: break-word;
-  align-items: stretch;
-  -webkit-align-items: stretch;
+.cid-rWunPnD0l7 .mbr-text DIV {
+  color: #251515;
 }
-.cid-rUCmoCaSiR .card_cont {
-  -o-transition: all .5s;
-  -ms-transition: all .5s;
-  -moz-transition: all .5s;
-  -webkit-transition: all .5s;
-  transition: all .5s;
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  text-align: center;
-  background-color: #eee;
+.cid-rWunPnD0l7 .mbr-text B {
+  color: #251515;
 }
-.cid-rUCmoCaSiR .card-front {
-  z-index: 2;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.cid-rUCmoCaSiR .card-front img {
-  min-height: 100%;
-  min-width: 100%;
-  width: auto;
-  max-width: 600px;
-}
-.cid-rUCmoCaSiR .card_back {
-  width: 100%;
-  height: 100%;
-  padding: 30px 30px;
-  color: #ffffff;
-  background-color: #55b4d4;
-  z-index: 1;
-  margin: 0;
-  text-align: center;
-  overflow: hidden;
-  -o-transform: rotateY(-180deg);
-  -ms-transform: rotateY(-180deg);
-  -moz-transform: rotateY(-180deg);
-  -webkit-transform: rotateY(-180deg);
-  transform: rotateY(-180deg);
-}
-.cid-rUCmoCaSiR .card {
-  min-height: 300px;
-}
-.cid-rUCmoCaSiR .card:hover .card-front {
-  z-index: 1;
-  -o-transform: rotateY(180deg);
-  -ms-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-}
-.cid-rUCmoCaSiR .card:hover .card_back {
-  z-index: 2;
-  -o-transform: rotateY(0deg);
-  -ms-transform: rotateY(0deg);
-  -moz-transform: rotateY(0deg);
-  -webkit-transform: rotateY(0deg);
-  transform: rotateY(0deg);
-}
-.cid-rUCmoCaSiR .builderCard .card_back {
-  border-bottom-left-radius: 100px;
-}
-.cid-rUCmoCaSiR .builderCard .card_cont {
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidd;
-  -moz-backface-visibility: visible;
-  -webkit-backface-visibility: visible;
-  backface-visibility: visible;
-}
-.cid-rUCmoCaSiR P {
-  text-align: left;
+.cid-rWunPnD0l7 .mbr-text {
+  color: #232323;
 }
 .cid-rVgTZSxAwC {
   padding-top: 60px;
@@ -2560,6 +2494,9 @@ body {
 .cid-rVgTZSxAwC .mbr-section-subtitle {
   color: #767676;
 }
+.cid-rVgTZSxAwC H2 {
+  text-align: left;
+}
 .cid-rW0L3rqqy1 {
   padding-top: 15px;
   padding-bottom: 15px;
@@ -2568,6 +2505,12 @@ body {
 .cid-rW0L3rqqy1 .mbr-text,
 .cid-rW0L3rqqy1 blockquote {
   color: #767676;
+}
+.cid-rW0L3rqqy1 .mbr-text B {
+  color: #251515;
+}
+.cid-rW0L3rqqy1 .mbr-text {
+  color: #232323;
 }
 .cid-rW11BJpnSU {
   padding-top: 0px;
@@ -2586,61 +2529,40 @@ body {
 .cid-rW11BJpnSU .mbr-text B {
   color: #232323;
 }
-.cid-rW0MrSsHyI {
+.cid-rWuiGZaFu1 {
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: #b2ccd2;
+  background: #b2ccd2;
 }
-@media (min-width: 992px) {
-  .cid-rW0MrSsHyI .mbr-figure {
-    padding-right: 4rem;
+.cid-rWuiGZaFu1 .image-block {
+  margin: auto;
+}
+.cid-rWuiGZaFu1 figcaption {
+  position: relative;
+}
+.cid-rWuiGZaFu1 figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rWuiGZaFu1 .image-block {
+    width: 100% !important;
   }
 }
-@media (max-width: 992px) {
-  .cid-rW0MrSsHyI .mbr-figure {
-    padding-bottom: 1rem;
-  }
-}
-.cid-rW0MrSsHyI .mbr-text {
-  color: #251515;
-}
-.cid-rW0VW7WRxb {
+.cid-rWujcX83wf {
   padding-top: 15px;
-  padding-bottom: 15px;
+  padding-bottom: 60px;
   background-color: #b2ccd2;
 }
-@media (min-width: 992px) {
-  .cid-rW0VW7WRxb .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 992px) {
-  .cid-rW0VW7WRxb .mbr-figure {
-    padding-bottom: 1rem;
-  }
-}
-.cid-rW0VW7WRxb .mbr-text {
+.cid-rWujcX83wf .mbr-text,
+.cid-rWujcX83wf blockquote {
   color: #767676;
 }
-.cid-rW0VW7WRxb .mbr-text B {
+.cid-rWujcX83wf .mbr-text DIV {
   color: #251515;
 }
-.cid-rW10ldzjUb {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background-color: #b2ccd2;
-}
-@media (min-width: 992px) {
-  .cid-rW10ldzjUb .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 992px) {
-  .cid-rW10ldzjUb .mbr-figure {
-    padding-bottom: 1rem;
-  }
-}
-.cid-rW10ldzjUb .mbr-text {
+.cid-rWujcX83wf .mbr-text {
   color: #251515;
 }
 .cid-rVgVIITtVJ {
@@ -2662,23 +2584,6 @@ body {
 }
 .cid-rVgVIITtVJ .card-wrapper {
   height: 100%;
-}
-.cid-rW13ex3AHL {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background-color: #cccccc;
-}
-.cid-rW13ex3AHL .counter-container {
-  color: #767676;
-}
-.cid-rW13ex3AHL .counter-container ul {
-  margin-bottom: 0;
-}
-.cid-rW13ex3AHL .counter-container ul li {
-  margin-bottom: 1rem;
-}
-.cid-rW13ex3AHL .mbr-text UL {
-  color: #232323;
 }
 .cid-rW13LSLJj4 {
   padding-top: 15px;
