--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2904,464 +2904,28 @@ body {
   padding-bottom: 30px;
   background-color: #2e2e2e;
 }
-.cid-rUCcLHyWEW .navbar {
-  padding: .5rem 0;
-  background: #333333;
-  transition: none;
-  min-height: 77px;
-}
-.cid-rUCcLHyWEW .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
-}
-.cid-rUCcLHyWEW a {
-  font-style: normal;
-}
-.cid-rUCcLHyWEW .nav-item span {
-  padding-right: 0.4em;
-  line-height: 0.5em;
-  vertical-align: text-bottom;
-  position: relative;
-  text-decoration: none;
-}
-.cid-rUCcLHyWEW .nav-item a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0.7rem 0 !important;
-  margin: 0rem .65rem !important;
-}
-.cid-rUCcLHyWEW .nav-item:focus,
-.cid-rUCcLHyWEW .nav-link:focus {
-  outline: none;
-}
-.cid-rUCcLHyWEW .btn {
-  padding: 0.4rem 1.5rem;
-  display: inline-flex;
-  align-items: center;
-}
-.cid-rUCcLHyWEW .btn .mbr-iconfont {
-  font-size: 1.6rem;
-}
-.cid-rUCcLHyWEW .menu-logo {
-  margin-right: auto;
-}
-.cid-rUCcLHyWEW .menu-logo .navbar-brand {
-  display: flex;
-  margin-left: 5rem;
-  padding: 0;
-  transition: padding .2s;
-  min-height: 3.8rem;
-  align-items: center;
-}
-.cid-rUCcLHyWEW .menu-logo .navbar-brand .navbar-caption-wrap {
-  display: -webkit-flex;
-  -webkit-align-items: center;
-  align-items: center;
-  word-break: break-word;
-  min-width: 7rem;
-  margin: .3rem 0;
-}
-.cid-rUCcLHyWEW .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
-  line-height: 1.2rem !important;
-  padding-right: 2rem;
-}
-.cid-rUCcLHyWEW .menu-logo .navbar-brand .navbar-logo {
-  font-size: 4rem;
-  transition: font-size 0.25s;
-}
-.cid-rUCcLHyWEW .menu-logo .navbar-brand .navbar-logo img {
-  display: flex;
-}
-.cid-rUCcLHyWEW .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
-  transition: font-size 0.25s;
-}
-.cid-rUCcLHyWEW .navbar-toggleable-sm .navbar-collapse {
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-  padding-right: 5rem;
-  width: auto;
-}
-.cid-rUCcLHyWEW .navbar-toggleable-sm .navbar-collapse .navbar-nav {
-  flex-wrap: wrap;
-  -webkit-flex-wrap: wrap;
-  padding-left: 0;
-}
-.cid-rUCcLHyWEW .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
-  -webkit-align-self: center;
-  align-self: center;
-}
-.cid-rUCcLHyWEW .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
-  padding-left: 0;
-  padding-bottom: 0;
-}
-.cid-rUCcLHyWEW .dropdown .dropdown-menu {
-  background: #333333;
-  display: none;
-  position: absolute;
-  min-width: 5rem;
-  padding-top: 1.4rem;
-  padding-bottom: 1.4rem;
-  text-align: left;
-}
-.cid-rUCcLHyWEW .dropdown .dropdown-menu .dropdown-item {
-  width: auto;
-  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
-}
-.cid-rUCcLHyWEW .dropdown .dropdown-menu .dropdown-item::after {
-  right: 0.5rem;
-}
-.cid-rUCcLHyWEW .dropdown .dropdown-menu .dropdown-submenu {
-  margin: 0;
-}
-.cid-rUCcLHyWEW .dropdown.open > .dropdown-menu {
-  display: block;
-}
-.cid-rUCcLHyWEW .navbar-toggleable-sm.opened:after {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  content: '';
-  background-color: rgba(0, 0, 0, 0.1);
-  left: 0;
-  bottom: 0;
-  transform: translateY(100%);
-  -webkit-transform: translateY(100%);
-  z-index: 1000;
-}
-.cid-rUCcLHyWEW .navbar.navbar-short {
-  min-height: 60px;
-  transition: all .2s;
-}
-.cid-rUCcLHyWEW .navbar.navbar-short .navbar-toggler-right {
-  top: 20px;
-}
-.cid-rUCcLHyWEW .navbar.navbar-short .navbar-logo a {
-  font-size: 2.5rem !important;
-  line-height: 2.5rem;
-  transition: font-size 0.25s;
-}
-.cid-rUCcLHyWEW .navbar.navbar-short .navbar-logo a .mbr-iconfont {
-  font-size: 2.5rem !important;
-}
-.cid-rUCcLHyWEW .navbar.navbar-short .navbar-logo a img {
-  height: 3rem !important;
-}
-.cid-rUCcLHyWEW .navbar.navbar-short .navbar-brand {
-  min-height: 3rem;
-}
-.cid-rUCcLHyWEW button.navbar-toggler {
-  width: 31px;
-  height: 18px;
-  cursor: pointer;
-  transition: all .2s;
-  top: 1.5rem;
-  right: 1rem;
-}
-.cid-rUCcLHyWEW button.navbar-toggler:focus {
-  outline: none;
-}
-.cid-rUCcLHyWEW button.navbar-toggler .hamburger span {
-  position: absolute;
-  right: 0;
-  width: 30px;
-  height: 2px;
-  border-right: 5px;
-  background-color: #ffffff;
-}
-.cid-rUCcLHyWEW button.navbar-toggler .hamburger span:nth-child(1) {
-  top: 0;
-  transition: all .2s;
-}
-.cid-rUCcLHyWEW button.navbar-toggler .hamburger span:nth-child(2) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-rUCcLHyWEW button.navbar-toggler .hamburger span:nth-child(3) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-rUCcLHyWEW button.navbar-toggler .hamburger span:nth-child(4) {
-  top: 16px;
-  transition: all .2s;
-}
-.cid-rUCcLHyWEW nav.opened .hamburger span:nth-child(1) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-rUCcLHyWEW nav.opened .hamburger span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-  transition: all .25s;
-}
-.cid-rUCcLHyWEW nav.opened .hamburger span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  transition: all .25s;
-}
-.cid-rUCcLHyWEW nav.opened .hamburger span:nth-child(4) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-rUCcLHyWEW .collapsed.navbar-expand {
-  flex-direction: column;
-}
-.cid-rUCcLHyWEW .collapsed .btn {
-  display: flex;
-}
-.cid-rUCcLHyWEW .collapsed .navbar-collapse {
-  display: none !important;
-  padding-right: 0 !important;
-}
-.cid-rUCcLHyWEW .collapsed .navbar-collapse.collapsing,
-.cid-rUCcLHyWEW .collapsed .navbar-collapse.show {
-  display: block !important;
-}
-.cid-rUCcLHyWEW .collapsed .navbar-collapse.collapsing .navbar-nav,
-.cid-rUCcLHyWEW .collapsed .navbar-collapse.show .navbar-nav {
-  display: block;
-  text-align: center;
-}
-.cid-rUCcLHyWEW .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
-.cid-rUCcLHyWEW .collapsed .navbar-collapse.show .navbar-nav .nav-item {
-  clear: both;
-}
-.cid-rUCcLHyWEW .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-rUCcLHyWEW .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
-.cid-rUCcLHyWEW .collapsed .navbar-collapse.collapsing .navbar-buttons,
-.cid-rUCcLHyWEW .collapsed .navbar-collapse.show .navbar-buttons {
-  text-align: center;
-}
-.cid-rUCcLHyWEW .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
-.cid-rUCcLHyWEW .collapsed .navbar-collapse.show .navbar-buttons:last-child {
-  margin-bottom: 1rem;
-}
-.cid-rUCcLHyWEW .collapsed button.navbar-toggler {
-  display: block;
-}
-.cid-rUCcLHyWEW .collapsed .navbar-brand {
-  margin-left: 1rem !important;
-}
-.cid-rUCcLHyWEW .collapsed .navbar-toggleable-sm {
-  flex-direction: column;
-  -webkit-flex-direction: column;
-}
-.cid-rUCcLHyWEW .collapsed .dropdown .dropdown-menu {
-  width: 100%;
-  text-align: center;
-  position: relative;
-  opacity: 0;
-  display: block;
-  height: 0;
-  visibility: hidden;
-  padding: 0;
-  transition-duration: .5s;
-  transition-property: opacity,padding,height;
-}
-.cid-rUCcLHyWEW .collapsed .dropdown.open > .dropdown-menu {
-  position: relative;
-  opacity: 1;
-  height: auto;
-  padding: 1.4rem 0;
-  visibility: visible;
-}
-.cid-rUCcLHyWEW .collapsed .dropdown .dropdown-submenu {
-  left: 0;
-  text-align: center;
-  width: 100%;
-}
-.cid-rUCcLHyWEW .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
-  margin-top: 0;
-  position: inherit;
-  right: 0;
-  top: 50%;
-  display: inline-block;
-  width: 0;
-  height: 0;
-  margin-left: .3em;
-  vertical-align: middle;
-  content: "";
-  border-top: .30em solid;
-  border-right: .30em solid transparent;
-  border-left: .30em solid transparent;
-}
-@media (max-width: 991px) {
-  .cid-rUCcLHyWEW .navbar-expand {
-    flex-direction: column;
-  }
-  .cid-rUCcLHyWEW img {
-    height: 3.8rem !important;
-  }
-  .cid-rUCcLHyWEW .btn {
-    display: flex;
-  }
-  .cid-rUCcLHyWEW button.navbar-toggler {
-    display: block;
-  }
-  .cid-rUCcLHyWEW .navbar-brand {
-    margin-left: 1rem !important;
-  }
-  .cid-rUCcLHyWEW .navbar-toggleable-sm {
-    flex-direction: column;
-    -webkit-flex-direction: column;
-  }
-  .cid-rUCcLHyWEW .navbar-collapse {
-    display: none !important;
-    padding-right: 0 !important;
-  }
-  .cid-rUCcLHyWEW .navbar-collapse.collapsing,
-  .cid-rUCcLHyWEW .navbar-collapse.show {
-    display: block !important;
-  }
-  .cid-rUCcLHyWEW .navbar-collapse.collapsing .navbar-nav,
-  .cid-rUCcLHyWEW .navbar-collapse.show .navbar-nav {
-    display: block;
-    text-align: center;
-  }
-  .cid-rUCcLHyWEW .navbar-collapse.collapsing .navbar-nav .nav-item,
-  .cid-rUCcLHyWEW .navbar-collapse.show .navbar-nav .nav-item {
-    clear: both;
-  }
-  .cid-rUCcLHyWEW .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-rUCcLHyWEW .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
-  }
-  .cid-rUCcLHyWEW .navbar-collapse.collapsing .navbar-buttons,
-  .cid-rUCcLHyWEW .navbar-collapse.show .navbar-buttons {
-    text-align: center;
-  }
-  .cid-rUCcLHyWEW .navbar-collapse.collapsing .navbar-buttons:last-child,
-  .cid-rUCcLHyWEW .navbar-collapse.show .navbar-buttons:last-child {
-    margin-bottom: 1rem;
-  }
-  .cid-rUCcLHyWEW .dropdown .dropdown-menu {
-    width: 100%;
-    text-align: center;
-    position: relative;
-    opacity: 0;
-    display: block;
-    height: 0;
-    visibility: hidden;
-    padding: 0;
-    transition-duration: .5s;
-    transition-property: opacity,padding,height;
-  }
-  .cid-rUCcLHyWEW .dropdown.open > .dropdown-menu {
-    position: relative;
-    opacity: 1;
-    height: auto;
-    padding: 1.4rem 0;
-    visibility: visible;
-  }
-  .cid-rUCcLHyWEW .dropdown .dropdown-submenu {
-    left: 0;
-    text-align: center;
-    width: 100%;
-  }
-  .cid-rUCcLHyWEW .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
-    margin-top: 0;
-    position: inherit;
-    right: 0;
-    top: 50%;
-    display: inline-block;
-    width: 0;
-    height: 0;
-    margin-left: .3em;
-    vertical-align: middle;
-    content: "";
-    border-top: .30em solid;
-    border-right: .30em solid transparent;
-    border-left: .30em solid transparent;
-  }
-}
-@media (min-width: 767px) {
-  .cid-rUCcLHyWEW .menu-logo {
-    flex-shrink: 0;
-  }
-}
-.cid-rUCcLHyWEW .navbar-collapse {
-  flex-basis: auto;
-}
-.cid-rUCcLHyWEW .nav-link:hover,
-.cid-rUCcLHyWEW .dropdown-item:hover {
-  color: #c1c1c1 !important;
-}
-.cid-rUCi8kpzpj {
+.cid-rXrnrNEM8y {
   padding-top: 30px;
-  padding-bottom: 15px;
+  padding-bottom: 30px;
   background-color: #2e2e2e;
 }
-.cid-rUCi8kpzpj .row-links {
-  width: 100%;
-  justify-content: center;
-}
-.cid-rUCi8kpzpj .social-row {
-  width: 100%;
-  justify-content: center;
-}
-.cid-rUCi8kpzpj .media-container-row {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.cid-rUCi8kpzpj .media-container-row .foot-menu {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 0;
-  margin-bottom: 0;
-}
-.cid-rUCi8kpzpj .media-container-row .foot-menu li {
-  padding: 0 1rem 1rem 1rem;
-}
-.cid-rUCi8kpzpj .media-container-row .foot-menu li p {
-  margin: 0;
-}
-.cid-rUCi8kpzpj .media-container-row .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-}
-.cid-rUCi8kpzpj .media-container-row .social-list .mbr-iconfont-social {
-  font-size: 1.5rem;
+.cid-rXrnrNEM8y .line {
+  background-color: #ffffff;
   color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
 }
-.cid-rUCi8kpzpj .media-container-row .social-list .soc-item {
-  margin: 0 .5rem;
+.cid-rXrnrNEM8y .section-text {
+  padding: 2rem 0;
 }
-.cid-rUCi8kpzpj .media-container-row .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
+.cid-rXrnrNEM8y .inner-container {
+  margin: 0 auto;
 }
-.cid-rUCi8kpzpj .media-container-row .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-rUCi8kpzpj .media-container-row .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
+@media (max-width: 768px) {
+  .cid-rXrnrNEM8y .inner-container {
+    width: 100% !important;
   }
-}
-.cid-rUCi8kpzpj .media-container-row .row-copirayt {
-  word-break: break-word;
-  width: 100%;
-}
-.cid-rUCi8kpzpj .media-container-row .row-copirayt p {
-  width: 100%;
 }
 .cid-rUMsGhw1Ju {
   padding-top: 30px;
@@ -3373,6 +2937,9 @@ body {
 }
 .cid-rUMsGhw1Ju I {
   color: #251515;
+}
+.cid-rUMsGhw1Ju .mbr-section-subtitle B {
+  color: #ffffff;
 }
 .cid-rUMv8I2L3h {
   padding-top: 15px;
@@ -3407,6 +2974,69 @@ body {
   background-color: #b2ccd2;
 }
 .cid-rUMSo3C6C8 .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rXrmwLowac {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #e4d295;
+}
+.cid-rXrmwLowac .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rXrqrcv6n1 {
+  padding-top: 60px;
+  padding-bottom: 45px;
+  background-image: url("../../../assets/images/jumbotron.jpg");
+}
+.cid-rXrrwuyHva {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #cebfaf;
+}
+.cid-rXrrwuyHva .mbr-text,
+.cid-rXrrwuyHva blockquote {
+  color: #767676;
+}
+.cid-rXrrwuyHva .mbr-text P {
+  color: #232323;
+}
+.cid-rXrs6qIVam {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #b2ccd2;
+}
+.cid-rXrs6qIVam .mbr-text,
+.cid-rXrs6qIVam blockquote {
+  color: #767676;
+}
+.cid-rXrs6qIVam .mbr-text P {
+  color: #251515;
+}
+.cid-rXrtoex3SP {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #cebfaf;
+}
+.cid-rXrtoex3SP .mbr-text,
+.cid-rXrtoex3SP blockquote {
+  color: #767676;
+}
+.cid-rXrtoex3SP .mbr-text P {
+  color: #232323;
+}
+.cid-rUN066JdIb {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-rXrpYnN1J1 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rXrpYnN1J1 .mbr-text,
+.cid-rXrpYnN1J1 blockquote {
   color: #767676;
 }
 .cid-rUN066JdIb {
