--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2899,6 +2899,9 @@ body {
     padding: 0 0 2rem 0 !important;
   }
 }
+.cid-rZlByf554w {
+  background: linear-gradient(45deg, #b2ccd2, #6576aa);
+}
 .cid-rW1dZcX1LG {
   padding-top: 30px;
   padding-bottom: 30px;
