--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2900,7 +2900,34 @@ body {
   }
 }
 .cid-rZlByf554w {
-  background: linear-gradient(45deg, #b2ccd2, #6576aa);
+  background: linear-gradient(45deg, #b2ccd2, #b2ccd2);
+}
+.cid-rZlHDtoe4y {
+  padding-top: 60px;
+  padding-bottom: 15px;
+  background-color: #b2ccd2;
+}
+.cid-rZlHDtoe4y .mbr-text,
+.cid-rZlHDtoe4y blockquote {
+  color: #767676;
+}
+.cid-rZlHDtoe4y .mbr-text B {
+  color: #251515;
+}
+.cid-rZlHDtoe4y .mbr-text {
+  color: #251515;
+}
+.cid-rZlJm3uaam {
+  padding-top: 15px;
+  padding-bottom: 60px;
+  background-color: #b2ccd2;
+}
+.cid-rZlJm3uaam .mbr-text,
+.cid-rZlJm3uaam blockquote {
+  color: #767676;
+}
+.cid-rZlJm3uaam .mbr-text B {
+  color: #251515;
 }
 .cid-rW1dZcX1LG {
   padding-top: 30px;
